--- a/src/styles/Learn.css
+++ b/src/styles/Learn.css
@@ -106,7 +106,7 @@
     color: rgb(211, 141, 12);
     text-shadow: 2px 2px #000000;
     margin: auto;
-    margin: 0.2em auto;
+    margin: 0.5em auto;
     text-align: center;
 }
 
